# bbc2podcast

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml.example  pyproject.toml
.github/workflows/: docker.yml  lint.yml
bbc2podcast/: __init__.py  app.py  config.py  update.py
